<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initScreen_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/content_layout_backg"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/txt_check_pw_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textEmailAddress"
            android:background="@drawable/edit_text_backg"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."
            android:ems="10"
            android:hint="@string/hintLgnEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtPassword_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textPassword"
            android:background="@drawable/edit_text_backg"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txtPassword_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textPassword"
            android:background="@drawable/edit_text_backg"
            android:ems="10"
            android:hint="@string/hintConfPassword"
            android:inputType="textPassword"
            android:padding="10dp" />
        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/google_red"
            android:padding="16dp"
            android:text="@string/btnCheck"
            android:textColor="@color/color_white" />
        <EditText
            android:id="@+id/txtPassword_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="textPassword"
            android:background="@drawable/edit_text_backg"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hintNewPassword"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBackToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/floatBtnPressed"
                android:padding="13dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:text="@string/btnShowLogin" />

            <Button
                android:id="@+id/btnSendReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/google_red"
                android:padding="16dp"
                android:text="@string/btnReset"
                android:textColor="@color/color_white" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>